--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "watch": "nodemon -L server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
